# zkurtz

./: .gitignore  LICENSE  README.adoc  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml
demo/ml/: imbalance.ipynb
zkurtz/: constantclass.py
zkurtz/classtools/: constantclass.py  demo.py
zkurtz/classtools/tests/: test_constantclass.py
zkurtz/math/random/: demo.py  uniform.py
